--- a/Clase_4.ipynb
+++ b/Clase_4.ipynb
@@ -96,7 +96,7 @@
         "    rango_etario= \"Adolescente\"\n",
         "#Validacion de Email\n",
         "email=input(\"Y finalmente, tu correo electronico \")\n",
-        "if len(email)==0 or email.find(\"@\")!=\"\":#valido que se haya ingresado caracteres en email\n",
+        "if len(email)==0 or email.find(\"@\")==\"\":#valido que se haya ingresado caracteres en email\n",
         "   print(\"ERROR.No ha ingresado un e-mail valido\")\n",
         "print(\"Gracias!\", end='\\n')\n",
         "#muestro los datos ingreados\n",
